initia implementation of css styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,45 @@
 body {
   margin: 0;
 }
- 
+
+.error-message {
+  font-weight: bold;
+  color: red;
+}
+
 a {
   list-style: none;
   color: black;
 }
- 
-button,
-select {
-  padding: 5px 10px;
+
+button {
+  padding: 3px 10px;
   min-width: 50px;
   margin: 5px;
-  font-size: 18px;
+  font-size: 14px;
+  border-radius: 8px;
+  color: white;
+  font-weight: bold;
+  background: #ffc52f;
+  border-color: white;
+  height: 25px;
 }
- 
+
 label {
   width: 200px;
   display: block;
+  font-size: 14px;
 }
- 
+
 input,
 textarea {
-  width: 200px;
+  width: 250px;
   padding: 10px;
   display: inline-block;
   margin: 10px;
 }
- 
-.Navbar {
+
+/* .Navbar {
   background: #515f7d;
   color: white;
   padding: 0px 20px;
@@ -43,29 +54,49 @@ textarea {
   color: white;
   font-size: 24px;
   font-weight: 600;
-}
- 
+} */
+
 .card {
-  width: 400px;
+  width: 325px;
   padding: 10px;
-  box-shadow: 0px 2px 3px grey;
+  box-shadow: 0px 2px 3px #ffc52f;
   margin: 0 auto;
   margin-bottom: 20px;
   background: #94a7c8;
   border-radius: 4px;
+  background-image: linear-gradient(to top, #ffc52f, white );
+  text-decoration: none;
 }
- 
-.GameCard h3::after {
-  content: url("https://education-team-2020.s3.eu-west-1.amazonaws.com/web-dev/m3/icon-expand.png");
-  margin-left: 5px;
+
+.GamesListPage ul li {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
- 
+
+.UserActivity li {
+  display: flex;
+}
+
+.card img {
+  height: 300px;
+}
+
+.card a {
+  text-decoration: none;
+}
+
+ .card:hover {
+    background-image: linear-gradient(to bottom, #ffc52f, white );
+    position: relative;
+    top: -4px;
+  }
+
 .EditGamePage,
 .AddGame,
 .AddComment {
-  background: #f9eec3;
-  border: 1px solid grey;
-  box-shadow: 0px 2px 3px grey;
+  background-image: linear-gradient(to bottom, #ffc52f, white);
+  box-shadow: 0px 2px 3px white;
   width: 400px;
   text-align: center;
   margin: 0 auto;
@@ -73,24 +104,44 @@ textarea {
   padding: 10px;
   border-radius: 4px;
 }
- 
-.EditGamePage {
+
+/* .EditGamePage {
   background-color: rgb(239, 196, 88);
-}
- 
+} */
+
 .EditGamePage form,
 .AddComment form,
-.AddGame form {
+.AddGame form,
+.SignupPage form,
+.LoginPage form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 10px 0;
+  font-size: 12px;
 }
- 
+
+.SignupPage a,
+.LoginPage a,
+.SignupPage p,
+.LoginPage p {
+  font-size: 14px;
+}
+
 .AddComment button,
 .AddGame button {
   display: block;
 }
- 
+
 .CommentCard {
   background-color: #dfeef9;
+}
+
+.GamesListPage,
+.UserProfile,
+.GameDetails,
+.EditGamePage,
+.LoginPage,
+.SignupPage {
+  padding: 100px 0;
 }
