--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
+body, ul, li, h1, h2, a {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
