--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .Navbar {
-    background-image: linear-gradient(to right, #ffc52f, white);
+    background-image: linear-gradient(to right, red, white);
     color: white;
     box-shadow: 0px 1px 2px gray;
     width: 100%;
@@ -36,20 +36,6 @@
   .nav-menu {
     padding-right: 10px;
   }
-
-  /* button:hover {
-    position: relative;
-    top: -2px;
-  } */
-
-  /* button {
-    border-radius: 8px;
-    font-size: 14px;
-    color: white;
-    font-weight: bold;
-    background: #ffc52f;
-    border-color: white;
-  } */
 
   @media (max-width: 767px) {}
 
