--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
   color: red;
 }
 
+.success-message {
+  font-weight: bold;
+  color: green;
+}
+
 a {
   list-style: none;
   color: black;
