--- a/src/index.responsive-styles.css
+++ b/src/index.responsive-styles.css
@@ -30,13 +30,17 @@
     width: 250px;
     margin-left: 15px;
   }
+  .AddGame.card {
+    width: 150px;
+    margin: 0;
+    padding: 0;
+  }
 
   .card img {
     height: 200px;
   }
 
   .GamesListPage,
-  .Search,
   .AboutPage,
   .LoginPage,
   .SignupPage,
@@ -45,13 +49,9 @@
     margin-right: 60px;
   }
 
-  AddGame form {
+  .AddGame form {
     margin-right: 20px;
     width: 50px;
-  }
-
-  AddGame{
-    margin-right: 20px;
   }
 
   .Logo {
@@ -64,8 +64,9 @@
   }
 
 }
-/* iPhone 14 Pro Max */
-@media (min-width:430px) {
+
+/* 430 x 932 iPhone 14 Pro Max */
+@media (min-width:430px) and (max-width:430px) {
   #root {
     min-height: 932px;
     width: 430px;
