--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html, body, ul, li, h1, h2, h3, h4, a {
   margin: 0 auto;
   text-align: center;
   width: 100vw;
-  min-height: 600px;
+  min-height: 100vh;
   position: relative;
 }
 
